// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`compile > initial compilation > should generate index.ts files with correct content 1`] = `
"// This file is automatically generated by Vocab.
// To make changes update translation.json files directly.

import { createLanguage, createTranslationFile } from "@vocab/core/runtime";
import type { TranslationFile } from "@vocab/core";

const translations: TranslationFile<
  "en" | "fr",
  { hello: () => "Hello" | "Bonjour"; world: () => "World" | "Monde" }
> = createTranslationFile({
  en: createLanguage({ hello: "Hello", world: "World" }),
  fr: createLanguage({ hello: "Bonjour", world: "Monde" }),
});

export default translations;
"
`;

exports[`compile > initial compilation > should generate index.ts files with correct content 2`] = `
"// This file is automatically generated by Vocab.
// To make changes update translation.json files directly.

import { createLanguage, createTranslationFile } from "@vocab/core/runtime";
import type { TranslationFile } from "@vocab/core";

const translations: TranslationFile<"en" | "fr", { title: () => "Title" }> =
  createTranslationFile({
    en: createLanguage({ title: "Title" }),
    fr: createLanguage({ title: "Title" }),
  });

export default translations;
"
`;

exports[`compile > watch mode > should update index.ts when alt language file is modified 1`] = `
"// This file is automatically generated by Vocab.
// To make changes update translation.json files directly.

import { createLanguage, createTranslationFile } from "@vocab/core/runtime";
import type { TranslationFile } from "@vocab/core";

const translations: TranslationFile<
  "en" | "fr",
  { hello: () => "Hello" | "Salut"; world: () => "World" | "Monde" }
> = createTranslationFile({
  en: createLanguage({ hello: "Hello", world: "World" }),
  fr: createLanguage({ hello: "Salut", world: "Monde" }),
});

export default translations;
"
`;

exports[`compile > watch mode > should update index.ts when main translation file is modified 1`] = `
"// This file is automatically generated by Vocab.
// To make changes update translation.json files directly.

import { createLanguage, createTranslationFile } from "@vocab/core/runtime";
import type { TranslationFile } from "@vocab/core";

const translations: TranslationFile<
  "en" | "fr",
  { hello: () => "Howdy" | "Bonjour"; world: () => "World" | "Monde" }
> = createTranslationFile({
  en: createLanguage({ hello: "Howdy", world: "World" }),
  fr: createLanguage({ hello: "Bonjour", world: "Monde" }),
});

export default translations;
"
`;

exports[`compile > with custom translation directory suffix > should compile and watch translations with custom suffix 1`] = `
"// This file is automatically generated by Vocab.
// To make changes update translation.json files directly.

import { createLanguage, createTranslationFile } from "@vocab/core/runtime";
import type { TranslationFile } from "@vocab/core";

const translations: TranslationFile<"en" | "fr", { hello: () => "Hello" }> =
  createTranslationFile({
    en: createLanguage({ hello: "Hello" }),
    fr: createLanguage({ hello: "Hello" }),
  });

export default translations;
"
`;

exports[`compile > with custom translation directory suffix > should compile and watch translations with custom suffix 2`] = `
"// This file is automatically generated by Vocab.
// To make changes update translation.json files directly.

import { createLanguage, createTranslationFile } from "@vocab/core/runtime";
import type { TranslationFile } from "@vocab/core";

const translations: TranslationFile<"en" | "fr", { hello: () => "Howdy" }> =
  createTranslationFile({
    en: createLanguage({ hello: "Howdy" }),
    fr: createLanguage({ hello: "Howdy" }),
  });

export default translations;
"
`;
